# liboptimization-dispatchers-matlab

./: .gitignore  Makefile  Makefile.am  TaskInterface.java  autogen.sh  cleanup_task.m  configure.ac  evaluate.example  execute_task.m  extract_task.m  job.ex.xml  load_workspace.m  optimization.m  set_fitness.m  startup.m  startup.m.in
debian/: changelog  control  liboptimization2-dispatchers-matlab.install
protobuf/: Makefile  task.proto
